{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 81,
  "lineage": "c8b0ab61-55e7-b736-36ea-f514cd38628d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "card-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116270211938:internet-gateway/igw-00735967cc718901b",
            "id": "igw-00735967cc718901b",
            "owner_id": "116270211938",
            "tags": {
              "Name": "card-IG"
            },
            "tags_all": {
              "Name": "card-IG"
            },
            "vpc_id": "vpc-068118ed69f380119"
          },
          "dependencies": [
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "card-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116270211938:loadbalancer/app/card-LB/b14aa7a706d91895",
            "arn_suffix": "app/card-LB/b14aa7a706d91895",
            "desync_mitigation_mode": "defensive",
            "dns_name": "card-LB-816782796.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:116270211938:loadbalancer/app/card-LB/b14aa7a706d91895",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "card-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0500a5b1b3f03bdfe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01601b209ccd4ffc2"
              },
              {
                "subnet_id": "subnet-08584e277183b753f"
              }
            ],
            "subnets": [
              "subnet-01601b209ccd4ffc2",
              "subnet-08584e277183b753f"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-068118ed69f380119",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_security_group",
            "aws_subnet.card-subnet-1",
            "aws_subnet.card-subnet-2",
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116270211938:listener/app/card-LB/b14aa7a706d91895/72141fc479975f24",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:116270211938:targetgroup/webapp-TG/0b3999a9ea6a3bff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:116270211938:listener/app/card-LB/b14aa7a706d91895/72141fc479975f24",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:116270211938:loadbalancer/app/card-LB/b14aa7a706d91895",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.card-LB",
            "aws_lb_target_group.webapp-TG",
            "aws_security_group.allow_security_group",
            "aws_subnet.card-subnet-1",
            "aws_subnet.card-subnet-2",
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116270211938:targetgroup/webapp-TG/0b3999a9ea6a3bff",
            "arn_suffix": "targetgroup/webapp-TG/0b3999a9ea6a3bff",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:116270211938:targetgroup/webapp-TG/0b3999a9ea6a3bff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-068118ed69f380119"
          },
          "dependencies": [
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "card-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116270211938:route-table/rtb-086e18db9a90abe50",
            "id": "rtb-086e18db9a90abe50",
            "owner_id": "116270211938",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00735967cc718901b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "card-RT"
            },
            "tags_all": {
              "Name": "card-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-068118ed69f380119"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.card-IG",
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "card_RT_ASSO_Public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09572efe2dbb3f75e",
            "route_table_id": "rtb-086e18db9a90abe50",
            "subnet_id": "subnet-08584e277183b753f"
          },
          "dependencies": [
            "aws_internet_gateway.card-IG",
            "aws_route_table.card-RT",
            "aws_subnet.card-subnet-1",
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "card_RT_ASSO_Public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062aef6d4a69a66b3",
            "route_table_id": "rtb-086e18db9a90abe50",
            "subnet_id": "subnet-01601b209ccd4ffc2"
          },
          "dependencies": [
            "aws_internet_gateway.card-IG",
            "aws_route_table.card-RT",
            "aws_subnet.card-subnet-2",
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116270211938:security-group/sg-0500a5b1b3f03bdfe",
            "description": "Allow security group traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0500a5b1b3f03bdfe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from my laptop",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from my laptop",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_security_group",
            "name_prefix": "",
            "owner_id": "116270211938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-068118ed69f380119"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116270211938:subnet/subnet-08584e277183b753f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08584e277183b753f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116270211938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "card-subnet-1"
            },
            "tags_all": {
              "Name": "card-subnet-1"
            },
            "vpc_id": "vpc-068118ed69f380119"
          },
          "dependencies": [
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116270211938:subnet/subnet-01601b209ccd4ffc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01601b209ccd4ffc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116270211938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "card-subnet-2"
            },
            "tags_all": {
              "Name": "card-subnet-2"
            },
            "vpc_id": "vpc-068118ed69f380119"
          },
          "dependencies": [
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116270211938:subnet/subnet-0533190d9bc476418",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0533190d9bc476418",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116270211938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "card-subnet-3"
            },
            "tags_all": {
              "Name": "card-subnet-3"
            },
            "vpc_id": "vpc-068118ed69f380119"
          },
          "dependencies": [
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116270211938:subnet/subnet-019f6e3bf40d38f25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019f6e3bf40d38f25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116270211938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "card-subnet-4"
            },
            "tags_all": {
              "Name": "card-subnet-4"
            },
            "vpc_id": "vpc-068118ed69f380119"
          },
          "dependencies": [
            "aws_vpc.card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "card_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116270211938:vpc/vpc-068118ed69f380119",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-083fde5324e44b8f6",
            "default_route_table_id": "rtb-0da2aeac33ec73de1",
            "default_security_group_id": "sg-0af012645779d2a42",
            "dhcp_options_id": "dopt-01038478fa29fb622",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068118ed69f380119",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da2aeac33ec73de1",
            "owner_id": "116270211938",
            "tags": {
              "Name": "card_vpc"
            },
            "tags_all": {
              "Name": "card_vpc"
            }
          }
        }
      ]
    }
  ]
}